# clash

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  build.rs  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
examples/: test_detach.rs
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
scripts/: install-gui-app.sh
src/: lib.rs  main.rs
src/adapters/: format.rs  input.rs  mod.rs  renderer.rs
src/adapters/views/: agent_detail.rs  agents.rs  diff.rs  inbox.rs  mod.rs  prompts.rs  scratch.rs  session_detail.rs  sessions.rs  subagent_detail.rs  subagents.rs  task_detail.rs  tasks.rs  team_detail.rs  teams.rs
src/application/: effects.rs  mod.rs  nav.rs  reducer.rs  state.rs  store.rs
src/application/actions/: agent.rs  mod.rs  navigation.rs  scratch.rs  table.rs  task.rs  team.rs  ui.rs
src/domain/: entities.rs  error.rs  ports.rs
src/infrastructure/: app.rs  clipboard.rs  config.rs  env_path.rs  error.rs  event.rs  ide.rs  lock.rs  logging.rs  mod.rs  process_scan.rs  session_refresh.rs  update.rs
src/infrastructure/cli/: commands.rs  mod.rs  parser.rs  runner.rs
src/infrastructure/daemon/: client.rs  mod.rs  protocol.rs  server.rs  session.rs
src/infrastructure/fs/: atomic.rs  backend.rs  mod.rs  presets.rs  repo_config.rs  store.rs  watcher.rs
src/infrastructure/hooks/: mod.rs  registry.rs
src/infrastructure/tui/: layout.rs  mod.rs  terminal_reset.rs  theme.rs
src/infrastructure/tui/widgets/: adopt_dialog.rs  busy_overlay.rs  centered.rs  confirm_dialog.rs  detail.rs  diff_widget.rs  help_overlay.rs  input_bar.rs  logo.rs  mod.rs  picker_dialog.rs  spinner.rs  table.rs  terminal.rs  toast.rs  tour.rs  update_overlay.rs
src/infrastructure/windowing/: attach.rs  mod.rs  terminal_choice.rs  terminal_spawn.rs
tests/: data_layer_test.rs  docs_consistency_test.rs  env_path_test.rs  full_cycle_test.rs
tests/fixtures/tasks/alpha-team/: task-1.json  task-2.json  task-3.json  task-4.json
tests/fixtures/teams/alpha-team/: config.json
tests/fixtures/teams/alpha-team/inboxes/: researcher.json
tests/fixtures/teams/bad-team/: config.json
tests/fixtures/teams/beta-team/: config.json
tests/fixtures/teams/extra-fields-team/: config.json
tests/helpers/: mod.rs  test_data_dir.rs
