[package]
name = "clash"
version = "1.2.2"
edition = "2021"

[dependencies]
# Core TUI
ratatui = "0.29"
crossterm = "0.28"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
color-eyre = "0.6"

# TUI widgets
tui-input = "0.11"
tui-big-text = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Filesystem
notify-debouncer-full = "0.4"
dirs = "6"

# PTY for session attach
nix = { version = "0.29", features = ["term", "process", "signal", "poll", "fs"] }
libc = "0.2"

# Encoding
base64 = "0.22"

# Terminal emulator (for inline session rendering)
vt100 = "0.15"

# Data
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
fuzzy-matcher = "0.3"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
tokio-test = "0.4"
