[package]
name = "clash-gui"
version = "0.1.0"
edition = "2021"
description = "clash GUI — cmux-style desktop client (experimental)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clash = { path = "../.." }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
