[package]
name = "clash-gui"
version = "1.69.6"
edition = "2021"
description = "clash GUI — cmux-style desktop client (experimental)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
clash = { path = "../.." }
# `unstable` enables multiwebview (Window::add_child) for the embedded browser tabs
# `devtools` exposes open_devtools() for browser tabs in release builds
tauri = { version = "2", features = ["unstable", "devtools"] }
# System clipboard for the embedded terminals: WKWebView has no native edit
# menu and xterm's canvas selection isn't a DOM selection, so navigator.clipboard
# is unreliable — copy/paste go through this plugin's Rust API instead.
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v7"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSURL", "NSGeometry"] }
